<resources>
    <string name="app_name">潜言</string>
    <string name="message_permission_rationale">授予以下权限以继续该程序:\n\n%1$s</string>
    <string name="resume">继续</string>
    <string name="cancel">取消</string>
    <string name="title_dialog">权限被拒绝</string>
    <string name="message_permission_always_failed"><![CDATA[<b>潜言</b>需要的<b>%s</b>权限已被您拒绝, 请您到\"应用信息->权限\"页面开启该权限, 否则该功能无法正常使用!]]></string>
    <string name="permission_name_calendar">日历</string>
    <string name="permission_name_camera">相机</string>
    <string name="permission_name_contacts">通讯录</string>
    <string name="permission_name_accounts">手机账号</string>
    <string name="permission_name_location">位置信息</string>
    <string name="permission_name_microphone">麦克风</string>
    <string name="permission_name_phone">电话</string>
    <string name="permission_name_sensors">身体传感器</string>
    <string name="permission_name_sms">短信</string>
    <string name="permission_name_storage">存储空间</string>
    <string name="setting">设置</string>
    <string name="text_loading">加载中...</string>
    <string name="text_press_quit">再按一次退出程序</string>
    <string name="text_chat">聊天</string>
    <string name="text_red_bag">红包</string>
    <string name="text_mine">我</string>
    <string name="text_please_input_phone_number">请输入手机号</string>
    <string name="text_please_input_pwd">请输入密码</string>
    <string name="text_forget_pwd">忘记密码</string>
    <string name="text_registered">立即注册</string>
    <string name="text_login">登录</string>
    <string name="text_phone_number_error">手机号码格式不正确</string>
    <string name="text_loginning">登录中...</string>
    <string name="text_country_area">国家/地区</string>
    <string name="forget_password_countdown_seconds">剩余(%ss)</string>
    <string name="forget_password_countdown_seconds2">重新获取(%ss)</string>
    <string name="text_send_verification_code">发送验证码</string>
    <string name="text_verification_code_not_null">验证码不能为空</string>
    <string name="text_please_input_confirm_pwd">请输入确认密码</string>
    <string name="text_not_inconsistent_pwd">两次输入的密码不一致</string>
    <string name="text_wait">请稍后...</string>
    <string name="text_please_input_nick">请先填写昵称</string>
    <string name="text_receiving_red_envelope">领取红包</string>
    <string name="text_reset_qr">重置二维码</string>
    <string name="text_account_security">账户安全</string>
    <string name="text_privacy_setting">隐私设置</string>
    <string name="text_about_us">关于我们</string>
    <string name="text_language_settings">语言设置</string>
    <string name="text_message_notification">消息提醒</string>
    <string name="text_logout">退出登录</string>
    <string name="text_setting">设置</string>
    <string name="text_receive_payment">收付款</string>
    <string name="text_i_want_to_pay">我要付款</string>
    <string name="text_i_want_to_receive">我要收款</string>
    <string name="text_qr_code_collection">向他人收款</string>
    <string name="text_collection_record">收款记录</string>
    <string name="text_pay_someone_else">向他人付款</string>
    <string name="text_order">订单</string>
    <string name="text_please_payment_password">请输入支付密码</string>
    <string name="text_please_payment_confirm">请输入确认支付密码</string>
    <string name="text_payment_inconsistent">两次输入的支付密码不一致</string>
    <string name="text_please_enter_the_shipping_address">请输入收货地址</string>
    <string name="text_please_add_the_shipping_address">添加收货地址</string>
    <string name="text_reset_get_code">重新获取</string>
    <string name="text_reset_get_new_code">重发短信验证码</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="str_recorder_normal">按住 说话</string>
    <string name="str_recorder_recording">松开 结束</string>
    <string name="str_recorder_wantcancel">松开手指，取消发送</string>
    <string name="str_cannot_add_friend">对方已设置不可添加</string>
    <string name="str_share_txt">Hi，我正在使用潜言app，领红包，每天10块+，天天都有,邀你一起来！邀请码是：%s。更多惊喜：Android下载地址:http://futruedao.com/ , iOS请前往APP Store。</string>


</resources>
