<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true"
    tools:context="com.daoyu.chat.module.login.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/login_logo" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_65"
        android:layout_marginRight="@dimen/dp_15"
        android:hint="@string/text_please_input_phone_number"
        android:inputType="number"
        android:lines="1"
        android:maxLength="11"
        android:paddingBottom="@dimen/dp_20"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/color_B2B2B2"
        android:textSize="@dimen/sp_17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/edit_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_15"
        android:hint="@string/text_please_input_pwd"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingBottom="@dimen/dp_20"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/color_B2B2B2"
        android:textSize="@dimen/sp_17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_phone" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp_10"
        android:text="@string/text_forget_pwd"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/edit_pwd"
        app:layout_constraintTop_toBottomOf="@id/edit_pwd" />

    <TextView
        android:id="@+id/tv_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_15"
        android:text="@string/text_registered"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/tv_forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/tv_forget_password"
        app:layout_constraintTop_toTopOf="@id/tv_forget_password" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sp_15"
        android:layout_marginTop="@dimen/dp_45"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@drawable/shape_login_btn_bg"
        android:gravity="center"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_12"
        android:text="@string/text_login"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_password" />
</android.support.constraint.ConstraintLayout>
